<resources>
    <string name="app_name">GudangAni</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="menu_loporan">LAPORAN</string>
    <string name="menu_transaksi">TRANSAKSI</string>
    <string name="menu_stokmin">STOK MIN/ HARGA PERUNIT</string>
    <string name="barang">USER</string>
    <string name="menu_barang">BARANG</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>