<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_barang"
            android:title="@string/menu_barang" />
        <item
            android:id="@+id/nav_user"
            android:title="@string/barang" />
        <item
            android:id="@+id/nav_stokmin"
            android:title="@string/menu_stokmin" />
        <item
            android:id="@+id/nav_transaksi"
            android:title="@string/menu_transaksi" />
        <item
            android:id="@+id/nav_laporan"
            android:title="@string/menu_loporan" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />

    </group>
</menu>